--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wechat"
+name = "application"
 version = "1.5.2"
 edition = "2021"
 publish = false
@@ -7,8 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "miniprogram-api"
-path = "src/bin/miniprogram-api.rs"
+name = "wechat-miniprogram-api"
+path = "src/bin/wechat/miniprogram-api.rs"
 
 [dependencies]
 config = { version = "~0.14.0", default-features = false, features = ["toml", "json", "json5"] }
@@ -20,16 +20,16 @@ tracing = { version = "~0.1.37" }
 tracing-subscriber = { version = "~0.3.16", default-features = false, features = ["registry"] }
 tracing-appender = { version = "~0.2.3" }
 
-tokio = { version = "~1.38.0", features = ["full"] }
+tokio = { version = "~1.41.0", features = ["full"] }
 axum = { version = "~0.7.1", features = ["macros"] }
-tower = { version = "~0.4.12" }
-tower-http = { version = "~0.5.0", features = ["cors", "request-id", "trace"] }
+tower = { version = "~0.5.0" }
+tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
 
-sqlx = { version = "~0.7.4", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
+sqlx = { version = "~0.8.0", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
 
 reqwest = { version = "~0.12.2" }
 
-totp-rs = { version = "~5.5.0", features = ["otpauth"] }
+totp-rs = { version = "~5.6.0", features = ["otpauth"] }
 fasthash = { version = "~0.4.0" }
 base62 = { version = "~2.0.2" }
 url = { version = "~2.5.0" }
