--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
-name = "wechat-miniprogram-api"
-path = "src/bin/wechat/miniprogram-api.rs"
+name = "miniprogram-api"
+path = "src/bin/miniprogram-api.rs"
 
 [dependencies]
 config = { version = "~0.14.0", default-features = false, features = ["toml", "json", "json5"] }
@@ -20,7 +20,7 @@ tracing = { version = "~0.1.37" }
 tracing-subscriber = { version = "~0.3.16", default-features = false, features = ["registry"] }
 tracing-appender = { version = "~0.2.3" }
 
-tokio = { version = "~1.41.0", features = ["full"] }
+tokio = { version = "~1.42.0", features = ["full"] }
 axum = { version = "~0.7.1", features = ["macros"] }
 tower = { version = "~0.5.0" }
 tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
