--- a/config.toml.example
+++ b/config.toml.example
@@ -5,11 +5,12 @@ listen="0.0.0.0"
 port=8080
 debug=true
 
-[databases.default]
+[databases.miniprogram]
 url="postgres://localhost:5432/yansongda"
 min_connections=2
 max_connections=20
-acquire_timeout=1
+idle_timeout=300
+acquire_timeout=3
 
 [short_url]
 domain="https://u.ysdor.cn"
