--- a/.github/workflows/coding-linter.yml
+++ b/.github/workflows/coding-linter.yml
@@ -91,6 +91,9 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
+      - name: Cd frontend directory
+        run: |
+          cd wechat
       - name: Run pnpm install
         run: |
           pnpm i
