--- a/.github/workflows/coding-linter.yml
+++ b/.github/workflows/coding-linter.yml
@@ -68,12 +68,12 @@ jobs:
   lint-frontend:
     name: Lint - Frontend
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: wechat
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
-      - name: Cd frontend directory
-        run: |
-          cd wechat
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
