--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -23,6 +23,6 @@ jobs:
           docker tag app registry.cn-shenzhen.aliyuncs.com/yansongda-app/miniprogram-api:$GITHUB_REF_NAME
       - name: Push the image to aliyun registry
         run: |
-          echo $ALIYUN_IMAGE_TOKEN | docker login --username=me@yansongda.cn registry.cn-shenzhen.aliyuncs.com --password-stdin
+          echo $ALIYUN_IMAGE_TOKEN | docker login --username=yansongda registry.cn-shenzhen.aliyuncs.com --password-stdin
           docker push registry.cn-shenzhen.aliyuncs.com/yansongda-app/miniprogram-api:$GITHUB_REF_NAME
           docker logout
