--- a/wechat/miniprogram/app.json
+++ b/wechat/miniprogram/app.json
@@ -4,7 +4,7 @@
     "pages/user/index",
     "pages/user/detail/index",
     "pages/totp/index",
-    "pages/totp/edit",
+    "pages/totp/edit/index",
     "pages/shortUrl/index",
     "pages/user/edit/nickname",
     "pages/user/edit/slogan",
