refactor: 优化页面交互体验 (#79)
- optimize(frontend): 优化用户查看与编辑交互体验
- optimize(frontend): 去掉 totp 页面非必要代码
- feat(backend): 增加用户相关编辑 API
- fix(backend): 修复新用户 token 未与 user 表正确关联的问题
- delete(backend): 去掉通用用户编辑 API

--- a/wechat/miniprogram/app.json
+++ b/wechat/miniprogram/app.json
@@ -2,10 +2,13 @@
   "pages": [
     "pages/home/index",
     "pages/user/index",
-    "pages/user/edit",
+    "pages/user/detail/index",
     "pages/totp/index",
-    "pages/totp/edit",
-    "pages/shortUrl/index"
+    "pages/totp/edit/index",
+    "pages/shortUrl/index",
+    "pages/user/edit/nickname",
+    "pages/user/edit/slogan",
+    "pages/user/edit/avatar"
   ],
   "window": {
     "backgroundTextStyle": "light",
