--- a/wechat/project.config.json
+++ b/wechat/project.config.json
@@ -27,7 +27,16 @@
     "ignoreDevUnusedFiles": false,
     "ignoreUploadUnusedFiles": false,
     "condition": false,
-    "es6": true
+    "es6": true,
+    "compileWorklet": false,
+    "uglifyFileName": false,
+    "uploadWithSourceMap": true,
+    "minifyWXSS": true,
+    "minifyWXML": true,
+    "localPlugins": false,
+    "disableUseStrict": false,
+    "swc": false,
+    "disableSWC": true
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
@@ -43,5 +52,5 @@
   },
   "appid": "wx36601dc74412c674",
   "projectname": "yansongda",
-  "libVersion": "3.0.2"
+  "libVersion": "3.7.12"
 }
