optimize: 优化代码,抽离 totp 组件

--- a/wechat/miniprogram/app.json
+++ b/wechat/miniprogram/app.json
@@ -43,6 +43,7 @@
     "@api/*": "/api/*",
     "@utils/*": "/utils/*",
     "@constant/*": "/constant/*",
-    "@models/*": "/models/*"
+    "@models/*": "/models/*",
+    "@components/*": "/components/*"
   }
 }
