--- a/wechat/tsconfig.json
+++ b/wechat/tsconfig.json
@@ -28,6 +28,7 @@
       "@utils/*": ["miniprogram/utils/*"],
       "@constant/*": ["miniprogram/constant/*"],
       "@models/*": ["miniprogram/models/*"],
+      "@components/*": ["miniprogram/components/*"],
     }
   },
   "exclude": [
