--- a/config.toml.example
+++ b/config.toml.example
@@ -1,12 +1,19 @@
 name="yansongda"
 
-[bin.miniprogram-api]
+[bin.api]
 listen="0.0.0.0"
 port=8080
 debug=true
 
-[databases.miniprogram]
-url="postgres://localhost:5432/yansongda"
+[databases.account]
+url="postgres://localhost:5432/account"
+min_connections=2
+max_connections=20
+idle_timeout=300
+acquire_timeout=3
+
+[databases.tool]
+url="postgres://localhost:5432/tool"
 min_connections=2
 max_connections=20
 idle_timeout=300
