--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,9 @@
 [workspace]
 members = ["application", "application-*"]
 default-members = ["application", "application-*"]
-resolver = "2"
+resolver = "3"
+
+[workspace.package]
+version = "1.2.3"
+edition = "2024"
+publish = false
