--- a/application-macros/Cargo.toml
+++ b/application-macros/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "application-macros"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
+publish.workspace = true
 
 [lib]
 proc-macro = true
 
 [dependencies]
-syn = { version = "2.0", features = ["full"] }
-quote = { version = "1.0" }
+syn = { version = "~2.0.0", features = ["full"] }
+quote = { version = "~1.0.0" }
+proc-macro2 = { version = "~1.0.0" }
