--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "application"
-version = "1.10.0"
-edition = "2024"
-publish = false
+version.workspace = true
+edition.workspace = true
+publish.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
