--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -17,6 +17,7 @@ application-util = { path = "../application-util"}
 
 tracing = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 
 tokio = { version = "~1.46.0", features = ["full"] }
 axum = { version = "~0.8.1", features = ["macros"] }
