--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build-application-api:
-    name: Building Docker Image [application-api]
+    name: Building [application-api] Image
     if: ${{ startsWith(github.ref, 'refs/tags/application-api') }}
     runs-on: ubuntu-latest
     steps:
