--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ default-members = ["application", "application-*"]
 resolver = "3"
 
 [workspace.package]
-version = "1.10.0"
+rust-version = "1.88.0"
+version = "1.10.1"
 edition = "2024"
 publish = false
 
