--- a/application-database/Cargo.toml
+++ b/application-database/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "application-database"
+rust-version.workspace = true
 version.workspace = true
 edition.workspace = true
 publish.workspace = true
