--- a/application-database/Cargo.toml
+++ b/application-database/Cargo.toml
@@ -13,7 +13,7 @@ chrono = { workspace = true }
 serde = { workspace = true }
 tracing = { workspace = true }
 
-sqlx = { version = "~0.8.0", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono" ] }
+sqlx = { version = "~0.8.0", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
 
 fasthash = { version = "~0.4.0" }
 base62 = { version = "~2.2.0" }
