--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -17,6 +17,7 @@ application-database = { path = "../application-database" }
 application-util = { path = "../application-util"}
 
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 
