--- a/huawei/atomicservice/TOTP/AppScope/app.json5
+++ b/huawei/atomicservice/TOTP/AppScope/app.json5
@@ -2,7 +2,7 @@
   "app": {
     "bundleName": "com.atomicservice.6917576589568238756",
     "bundleType": "atomicService",
-    "vendor": "example",
+    "vendor": "yansongda",
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:app_icon",
