--- a/config.toml.example
+++ b/config.toml.example
@@ -1,19 +1,19 @@
-name="yansongda"
+name="rs-application"
 
 [bin.api]
 listen="0.0.0.0"
 port=8080
-debug=true
+debug=false
 
 [databases.account]
-url="postgres://localhost:5432/account"
+url="mysql://root:root@localhost:3306/account"
 min_connections=2
 max_connections=20
 idle_timeout=300
 acquire_timeout=3
 
 [databases.tool]
-url="postgres://localhost:5432/tool"
+url="mysql://root:root@localhost:3306/tool"
 min_connections=2
 max_connections=20
 idle_timeout=300
