--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -32,12 +32,12 @@ jobs:
       - name: Push the image to Docker registry
         run: |
           docker tag app $DOCKERHUB_IMAGE_REPOSITORY:$GITHUB_REF_NAME
-          echo DOCKERHUB_TOKEN | docker login --username=yansongda --password-stdin
+          echo $DOCKERHUB_TOKEN | docker login --username=yansongda --password-stdin
           docker push $DOCKERHUB_IMAGE_REPOSITORY:$GITHUB_REF_NAME
           docker logout
       - name: Push the image to Github registry
         run: |
           docker tag app $GITHUB_IMAGE_REPOSITORY:$GITHUB_REF_NAME
-          echo DOCKERHUB_TOKEN | docker login --username=${{ github.actor }} ghcr.io --password-stdin
+          echo $GITHUB_TOKEN | docker login --username=${{ github.actor }} ghcr.io --password-stdin
           docker push $GITHUB_IMAGE_REPOSITORY:$GITHUB_REF_NAME
           docker logout
