--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  GITHUB_IMAGE_REPOSITORY: ${{ github.repository }}
+  GITHUB_IMAGE_REPOSITORY: ghcr.io/${{ github.repository }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_ACCESSTOKEN }}
   DOCKERHUB_IMAGE_REPOSITORY: yansongda/rs-application
   ALIYUN_IMAGE_TOKEN: ${{ secrets.ALIYUN_IMAGE_ACCESSTOKEN }}
