--- a/huawei/atomicservice/TOTP/AppScope/app.json5
+++ b/huawei/atomicservice/TOTP/AppScope/app.json5
@@ -3,7 +3,7 @@
     "bundleName": "com.atomicservice.6917576589568238756",
     "bundleType": "atomicService",
     "vendor": "yansongda",
-    "versionCode": 1000000,
+    "versionCode": 10000,
     "versionName": "1.0.0",
     "icon": "$media:app_icon",
     "label": "$string:app_name"
