--- a/huawei/atomicservice/TOTP/totp/src/main/module.json5
+++ b/huawei/atomicservice/TOTP/totp/src/main/module.json5
@@ -1,6 +1,6 @@
 {
   "module": {
-    "name": "entry",
+    "name": "totp",
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
@@ -14,7 +14,7 @@
     "abilities": [
       {
         "name": "EntryAbility",
-        "srcEntry": "./ets/entryability/EntryAbility.ets",
+        "srcEntry": "./ets/ability/EntryAbility.ets",
         "description": "$string:EntryAbility_desc",
         "icon": "$media:icon",
         "label": "$string:EntryAbility_label",
