--- a/wechat/package.json
+++ b/wechat/package.json
@@ -1,12 +1,12 @@
 {
   "name": "yansongda",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "wechat for yansongda",
   "type": "module",
   "scripts": {
-    "biome:check": "biome check miniprogram",
-    "biome:fix": "biome check --apply miniprogram",
-    "biome:fix-unsafe": "biome check --apply-unsafe miniprogram"
+    "biome:check": "biome check",
+    "biome:fix": "biome check --fix",
+    "biome:fix-unsafe": "biome check --fix --unsafe"
   },
   "keywords": [
     "miniprogram",
@@ -15,12 +15,12 @@
   "author": "me@yansongda.cn",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "1.7.2",
+    "@biomejs/biome": "2.2.4",
     "miniprogram-api-typings": "^4.1.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "tdesign-miniprogram": "^1.10.1"
   },
-  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
+  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
 }
