--- a/huawei/atomicservice/MFA/totp/src/main/module.json5
+++ b/huawei/atomicservice/MFA/totp/src/main/module.json5
@@ -15,9 +15,9 @@
       {
         "name": "EntryAbility",
         "srcEntry": "./ets/ability/EntryAbility.ets",
-        "description": "$string:EntryAbility_desc",
+        "description": "$string:entry_ability_desc",
         "icon": "$media:icon",
-        "label": "$string:EntryAbility_label",
+        "label": "$string:entry_ability_label",
         "startWindowIcon": "$media:startIcon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
