--- a/huawei/atomicservice/MFA/totp/src/main/module.json5
+++ b/huawei/atomicservice/MFA/totp/src/main/module.json5
@@ -10,7 +10,7 @@
     ],
     "deliveryWithInstall": true,
     "installationFree": true,
-    "pages": "$profile:main_pages",
+    "pages": "$profile:pages",
     "abilities": [
       {
         "name": "EntryAbility",
