--- a/huawei/atomicservice/MFA/totp/src/main/module.json5
+++ b/huawei/atomicservice/MFA/totp/src/main/module.json5
@@ -11,6 +11,7 @@
     "deliveryWithInstall": true,
     "installationFree": true,
     "pages": "$profile:pages",
+    "routerMap": "$profile:routes",
     "abilities": [
       {
         "name": "EntryAbility",
