--- a/huawei/atomicservice/MFA/totp/src/main/module.json5
+++ b/huawei/atomicservice/MFA/totp/src/main/module.json5
@@ -33,6 +33,12 @@
           }
         ]
       }
+    ],
+    "metadata": [
+      {
+        "name": "client_id",
+        "value": "6917576589568238756"
+      }
     ]
   }
 }
