--- a/huawei/atomicservice/MFA/oh-package.json5
+++ b/huawei/atomicservice/MFA/oh-package.json5
@@ -2,9 +2,11 @@
   "modelVersion": "5.1.0",
   "description": "多因子认证（MFA）服务，目前支持 TOTP 算法。为您提供便捷、简单、纯粹的认证服务",
   "dependencies": {
+    "@ohos/axios": "^2.2.6"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
     "@ohos/hamock": "1.0.0"
-  }
+  },
+  "dynamicDependencies": {}
 }
