--- a/application/Cargo.toml
+++ b/application/Cargo.toml
@@ -20,6 +20,7 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+chrono = { workspace = true }
 
 tokio = { version = "~1.47.0", features = ["full"] }
 axum = { version = "~0.8.1", features = ["macros"] }
