--- a/application-api/Cargo.toml
+++ b/application-api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "application"
+name = "application-api"
 rust-version.workspace = true
 version.workspace = true
 edition.workspace = true
@@ -21,7 +21,7 @@ tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 
-tokio = { version = "~1.46.0", features = ["full"] }
+tokio = { version = "~1.48.0", features = ["full"] }
 axum = { version = "~0.8.1", features = ["macros"] }
 tower = { version = "~0.5.0" }
 tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
