--- a/application-database/Cargo.toml
+++ b/application-database/Cargo.toml
@@ -15,6 +15,5 @@ tracing = { workspace = true }
 
 sqlx = { version = "~0.8.0", features = [ "runtime-tokio", "tls-rustls", "mysql", "chrono" ] }
 
-fasthash = { version = "~0.4.0" }
-base62 = { version = "~2.2.0" }
 totp-rs = { version = "~5.7.0", features = ["otpauth"] }
+uuid = { version = "1.18.1", features = ["v7"] }
