--- a/huawei/atomicservice/MFA/totp/src/main/module.json5
+++ b/huawei/atomicservice/MFA/totp/src/main/module.json5
@@ -19,7 +19,7 @@
         "description": "$string:entry_ability_desc",
         "icon": "$media:icon",
         "label": "$string:entry_ability_label",
-        "startWindowIcon": "$media:startIcon",
+        "startWindowIcon": "$media:start_icon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
         "skills": [
