--- a/huawei/atomicservice/MFA/AppScope/app.json5
+++ b/huawei/atomicservice/MFA/AppScope/app.json5
@@ -5,7 +5,7 @@
     "vendor": "yansongda",
     "versionCode": 10000,
     "versionName": "1.0.0",
-    "icon": "$media:app_icon",
+    "icon": "$media:start_icon",
     "label": "$string:app_name"
   }
 }
