--- a/huawei/atomicservice/MFA/build-profile.json5
+++ b/huawei/atomicservice/MFA/build-profile.json5
@@ -41,8 +41,8 @@
   },
   "modules": [
     {
-      "name": "totp",
-      "srcPath": "./totp",
+      "name": "entry",
+      "srcPath": "./entry",
       "targets": [
         {
           "name": "default",
