--- a/huawei/atomicservice/MFA/entry/oh-package.json5
+++ b/huawei/atomicservice/MFA/entry/oh-package.json5
@@ -1,5 +1,5 @@
 {
-  "name": "totp",
+  "name": "entry",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
