--- a/huawei/atomicservice/MFA/entry/src/main/module.json5
+++ b/huawei/atomicservice/MFA/entry/src/main/module.json5
@@ -1,6 +1,6 @@
 {
   "module": {
-    "name": "totp",
+    "name": "entry",
     "type": "entry",
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
