--- a/huawei/atomicservice/MFA/entry/src/main/module.json5
+++ b/huawei/atomicservice/MFA/entry/src/main/module.json5
@@ -45,10 +45,10 @@
         "value": "6917576589568238756"
       },
       // todo: 正式上线需确认 env 环境已删除
-      {
-        "name": "env",
-        "value": "test"
-      }
+//      {
+//        "name": "env",
+//        "value": "test"
+//      }
     ]
   }
 }
