--- a/huawei/atomicservice/MFA/AppScope/app.json5
+++ b/huawei/atomicservice/MFA/AppScope/app.json5
@@ -6,6 +6,7 @@
     "versionCode": 10000,
     "versionName": "1.0.0",
     "icon": "$media:start_icon",
-    "label": "$string:app_name"
+    "label": "$string:app_name",
+    "description": "$string:app_description",
   }
 }
