--- a/huawei/atomicservice/MFA/entry/src/main/module.json5
+++ b/huawei/atomicservice/MFA/entry/src/main/module.json5
@@ -37,6 +37,16 @@
     "requestPermissions": [
       {
         "name": "ohos.permission.INTERNET"
+      },
+      {
+        "name": "ohos.permission.CAMERA",
+        "reason": "$string:permission_reason_camera",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "always"
+        }
       }
     ],
     "metadata": [
