--- a/huawei/atomicservice/MFA/AppScope/app.json5
+++ b/huawei/atomicservice/MFA/AppScope/app.json5
@@ -5,7 +5,7 @@
     "vendor": "yansongda",
     "versionCode": 10100,
     "versionName": "1.1.0",
-    "icon": "$media:start_icon",
+    "icon": "$media:app_icon",
     "label": "$string:app_name",
     "description": "$string:app_description",
   }
