--- a/huawei/atomicservice/MFA/entry/src/main/module.json5
+++ b/huawei/atomicservice/MFA/entry/src/main/module.json5
@@ -17,9 +17,9 @@
         "name": "EntryAbility",
         "srcEntry": "./ets/ability/EntryAbility.ets",
         "description": "$string:module_entry_ability_desc",
-        "icon": "$media:icon",
+        "icon": "$media:app_icon",
         "label": "$string:entry_ability_label",
-        "startWindowIcon": "$media:start_icon",
+        "startWindowIcon": "$media:app_icon",
         "startWindowBackground": "$color:start_window_background",
         "exported": true,
         "skills": [
