--- a/huawei/atomicservice/MFA/AppScope/app.json5
+++ b/huawei/atomicservice/MFA/AppScope/app.json5
@@ -3,9 +3,9 @@
     "bundleName": "com.atomicservice.6917576589568238756",
     "bundleType": "atomicService",
     "vendor": "yansongda",
-    "versionCode": 10002,
-    "versionName": "1.0.2",
-    "icon": "$media:start_icon",
+    "versionCode": 10100,
+    "versionName": "1.1.0",
+    "icon": "$media:app_icon",
     "label": "$string:app_name",
     "description": "$string:app_description",
   }
