--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -27,6 +27,9 @@ jobs:
     name: Building [application-api] Image
     if: ${{ startsWith(github.ref, 'refs/tags/application-api') || (github.event_name == 'workflow_dispatch' && github.event.inputs.name == 'application-api') }}
     runs-on: ubuntu-latest
+    defaults:
+    run:
+      working-directory: rust
     permissions:
       packages: write
     steps:
