chore: 调整项目文件结构 (#104)

--- a/.github/workflows/coding-linter.yml
+++ b/.github/workflows/coding-linter.yml
@@ -12,6 +12,9 @@ jobs:
   check-backend:
     name: Check - Backend
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: rust
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -38,6 +41,9 @@ jobs:
   lint-backend:
     name: Lint - Backend
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: rust
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
