--- a/.github/workflows/coding-linter.yml
+++ b/.github/workflows/coding-linter.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: rust
+        working-directory: rs-application
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: rust
+        working-directory: rs-application
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
