--- a/huawei/atomicservice/MFA/AppScope/app.json5
+++ b/huawei/atomicservice/MFA/AppScope/app.json5
@@ -7,6 +7,6 @@
     "versionName": "1.2.0",
     "icon": "$media:app_icon",
     "label": "$string:app_name",
-    "description": "$string:app_description",
+    "description": "$string:app_description"
   }
 }
