--- a/rs-application/application-api/Cargo.toml
+++ b/rs-application/application-api/Cargo.toml
@@ -28,7 +28,7 @@ tower = { version = "~0.5.0" }
 tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
 http-body-util = { version = "~0.1.0" }
 
-fasthash = { version = "~0.4.0" }
+murmurs = { version = "~1.0.5" }
 base62 = { version = "~2.2.0" }
 url = { version = "~2.5.0" }
 totp-rs = { version = "~5.7.0", features = ["otpauth"] }
