--- a/huawei/atomicservice/MFA/entry/src/main/module.json5
+++ b/huawei/atomicservice/MFA/entry/src/main/module.json5
@@ -51,14 +51,18 @@
     ],
     "metadata": [
       {
+        "name": "configColorModeChangePerformanceInArkUI",
+        "value": "true"
+      },
+      {
         "name": "client_id",
         "value": "6917576589568238756"
       },
       // todo: 正式上线需确认 env 环境已删除
-//      {
-//        "name": "env",
-//        "value": "test"
-//      }
+      {
+        "name": "env",
+        "value": "test"
+      }
     ]
   }
 }
