--- a/huawei/atomicservice/MFA/AppScope/app.json5
+++ b/huawei/atomicservice/MFA/AppScope/app.json5
@@ -3,9 +3,9 @@
     "bundleName": "com.atomicservice.6917576589568238756",
     "bundleType": "atomicService",
     "vendor": "yansongda",
-    "versionCode": 10300,
-    "versionName": "1.3.0",
-    "icon": "$media:app_icon",
+    "versionCode": 10301,
+    "versionName": "1.3.1",
+    "icon": "$media:icon",
     "label": "$string:app_name",
     "description": "$string:app_description"
   }
