--- a/rs-application/application-api-next/Cargo.toml
+++ b/rs-application/application-api-next/Cargo.toml
@@ -23,13 +23,13 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 
 tokio = { version = "~1.48.0", features = ["full"] }
-salvo = { version = "~0.80.0" }
+salvo = { version = "~0.85.0", features = ["cors", "request-id"] }
 # axum = { version = "~0.8.1", features = ["macros"] }
 # tower = { version = "~0.5.0" }
 # tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
 # http-body-util = { version = "~0.1.0" }
 
-fasthash = { version = "~0.4.0" }
+#fasthash = { version = "~0.4.0" }
 base62 = { version = "~2.2.0" }
 url = { version = "~2.5.0" }
 totp-rs = { version = "~5.7.0", features = ["otpauth"] }
