--- a/rs-application/application-api/Cargo.toml
+++ b/rs-application/application-api/Cargo.toml
@@ -23,10 +23,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 
 tokio = { version = "~1.48.0", features = ["full"] }
-axum = { version = "~0.8.1", features = ["macros"] }
-tower = { version = "~0.5.0" }
-tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
-http-body-util = { version = "~0.1.0" }
+salvo = { version = "~0.85.0", features = ["cors", "request-id", "logging"] }
+# http-body-util = { version = "~0.1.0" }
 
 murmurs = { version = "~1.0.5" }
 base62 = { version = "~2.2.0" }
