--- a/rs-application/application-api/Cargo.toml
+++ b/rs-application/application-api/Cargo.toml
@@ -14,17 +14,15 @@ path = "src/bin/api.rs"
 [dependencies]
 application-kernel = { path = "../application-kernel" }
 application-database = { path = "../application-database" }
-application-util = { path = "../application-util"}
+application-util = { path = "../application-util" }
 
-chrono = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
 
 tokio = { version = "~1.48.0", features = ["full"] }
 salvo = { version = "~0.85.0", features = ["cors", "request-id", "logging"] }
-# http-body-util = { version = "~0.1.0" }
+futures-util = "0.3.31"
 
 murmurs = { version = "~1.0.5" }
 base62 = { version = "~2.2.0" }
