--- a/rs-application/application-api/Cargo.toml
+++ b/rs-application/application-api/Cargo.toml
@@ -14,22 +14,17 @@ path = "src/bin/api.rs"
 [dependencies]
 application-kernel = { path = "../application-kernel" }
 application-database = { path = "../application-database" }
-application-util = { path = "../application-util"}
+application-util = { path = "../application-util" }
 
-chrono = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
 
 tokio = { version = "~1.48.0", features = ["full"] }
-axum = { version = "~0.8.1", features = ["macros"] }
-tower = { version = "~0.5.0" }
-tower-http = { version = "~0.6.0", features = ["cors", "request-id", "trace"] }
-http-body-util = { version = "~0.1.0" }
+salvo = { version = "~0.85.0", features = ["cors", "request-id", "logging"] }
+futures-util = "0.3.31"
 
 murmurs = { version = "~1.0.5" }
 base62 = { version = "~2.2.0" }
 url = { version = "~2.5.0" }
 totp-rs = { version = "~5.7.0", features = ["otpauth"] }
-rs-snowflake = { version = "~0.6.0", default-features = false }
