--- a/rs-application/application-api/Cargo.toml
+++ b/rs-application/application-api/Cargo.toml
@@ -20,9 +20,9 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 
-tokio = { version = "~1.48.0", features = ["full"] }
-salvo = { version = "~0.85.0", features = ["cors", "request-id", "logging"] }
-futures-util = "0.3.31"
+tokio = { version = "~1.49.0", features = ["full"] }
+salvo = { version = "~0.88.0", features = ["cors", "request-id", "logging"] }
+futures-util = { version = "~0.3.31" }
 
 murmurs = { version = "~1.0.5" }
 base62 = { version = "~2.2.0" }
