--- a/rs-application/application-util/Cargo.toml
+++ b/rs-application/application-util/Cargo.toml
@@ -12,4 +12,4 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 
-reqwest = { version = "~0.13.1" }
+reqwest = { version = "~0.13.1", features = ["form"] }
